--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   ],
   "dependencies": {
     "angular": "1.x",
-    "angular-sanitize": "1.x"
+    "angular-sanitize": "1.x",
+    "grunt": "0.4.5",
+    "grunt-cli": "1.2.0"
   },
   "bugs": {
     "url": "https://github.com/ritz078/ngEmbed/issues"
