--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "smileys"
   ],
   "dependencies": {
-    "angular": "1.x",
-    "angular-sanitize": "1.x"
+    "angular": "^1.3.0",
+    "angular-sanitize": "^1.3.0"
   },
   "bugs": {
     "url": "https://github.com/ritz078/ngEmbed/issues"
