--- a/bower.json
+++ b/bower.json
@@ -26,8 +26,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "1.3.x",
-    "angular-sanitize": "1.3.x"
+    "angular": "^1.x",
+    "angular-sanitize": "^1.x"
   },
   "devDependencies": {}
 }
