--- a/package.json
+++ b/package.json
@@ -21,20 +21,19 @@
   ],
   "dependencies": {
     "angular": "^1.x",
-    "angular-sanitize": "^1.x",
-    "grunt": "0.4.5",
-    "grunt-cli": "1.2.0"
+    "angular-sanitize": "^1.x"
   },
   "bugs": {
     "url": "https://github.com/ritz078/ngEmbed/issues"
   },
   "homepage": "https://github.com/ritz078/ngEmbed",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.6.0"
+    "grunt": "^1.0.1",
+	"grunt-cli": "1.2.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^1.0.2",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-uglify": "^2.0.0"
   }
 }
